--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 	       </td>
 		</tr>
 	 </table>
-	 <hr size=""3>  </hr>
-    <h2> hobbies</h2>
+	 <hr size="3">  </hr>
+    <h2>My hobbies</h2>
 	  <ol>
 	    <li> dancing </li>
 	    <li> singing </li>
 		<li> riding </li>
 	 </ol>
-	 <hr> </hr>
-	 <h2> eduacation </h2>
+	 <hr>
+	 <h2> Qualification </h2>
      <ul>
          <li> Bca Student </li>
         <ul>
@@ -33,9 +33,9 @@
 		 <li> <strong> <a href="https://www.allduniv-ips.in/"> IPS,UoA</a> </strong></li>
 		</ul>		 
      </ul>
-	 <h2> want to know more ??</h2>
+	 <h2> want to know more about me ??</h2>
     <a href="cv.html" >My Resume</a>
-	<h1> please Fill the form for conatct..</h1>
+	<h1> please Fill the form for contact..</h1>
 	<a href="forms.html">Form</a>
   </body>
 </html>
