--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <table cellspacing="20">
 	    <tr>
 		 <td>
-		    <img src="My-Profile.png" width="200" height="200" alt="shivangi profie picture"> </img>
+		    <img src="profile pic.png" width="200" height="200" alt="shivangi profie picture"> </img>
          </td>
 		 <td> 
 		    <h1> Shivangi Tiwari </h1>
